--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "bootstrap": "^5.1.3",
         "bootstrap-sass": "^3.4.3",
         "font-awesome": "^4.7.0",
-        "react-confirm-alert": "^3.0.2"
+        "react-confirm-alert": "^3.0.2",
+        "sweetalert": "^2.1.2"
     }
 }
